@@ -1,3 +1,13 @@
+2001-04-12  Akim Demaille  <akim@epita.fr>
+
+	* automake.in (Language): New package, temporarily in this file.
+	Use Class::Struct.
+	(Automake): New package.
+	(%languages): New.
+	(&handle_single_transform_list): Use the language object's `ansi'
+	attribute instead of `$language_map{"$lang-ansi-p"}'.
+	(&register_language): Build and register the language too.
+
 2001-04-11  Tom Tromey  <tromey@redhat.com>
 
 	Fixes report from Larry Jones:
